6.0.5

6.0.4
Rename AppInfoCache.json to cache_AppInfo.json (which by default is covered by .gitignore in AL-Go for GitHub)
Refactor NuGet feed functionality to use NuGetFeed class
Add trusted NuGet feeds to settings to allow searching for NuGet packages in all trusted feeds
Support searching for Earliest, Latest, Exact or Any NuGet package (default is Latest)
Reset startcount when using Restart-BcContainer
Issue 3277 Run-ALCops uses wrong CodeAnalysis dll path
Add support for useDevEndpoint in Run-AlPipeline when importing test toolkit
New function Get-AppJsonFromAppFile to extract the app.json file from an app (also from a runtime package)
New function Copy-AppFilesToFolder to copy or download and unpack all apps from an array of .zip or .app files and place them in a folder
New function Create-SymbolsFileFromAppFile to create a symbols only app file from an app file
New switch on Run-AlPipeline, enableCodeAnalyzersOnTestApps, to enable CodeCops and other code analyzers on test apps

6.0.3
Just-In-Time install dotnet 8.0.0 for Business Central version 24 or above (needed by alc.exe)

6.0.2
Compile-AppInBcContainer: When checking whether symbol download is needed, the Application dependency wasn't checked for version number
When using Publish-PerTenantExtensionApps with a set of apps, which takes a very long time to publish, the AccessToken might expire and lead to failure. AccessToken is now refreshed when needed.
Issue #3254 vsix no longer includes dotnet framework 4.8 compatible dlls for version 24
Avoid using CDN when downloading from bcinsider as this frequently changes and subsequently fails
Issue #3259 get-bcartifactUrl PS7.4 Error querying artifacts

6.0.1
New-AadAppsForBC doesn't work with the newer versions of Microsoft.Graph module (where the type of the accesstoken parameter has changed)
New-AppSourceSubmission has a new parameter -doNotUpdateVersionNumber to support hotfixes in AppSource for earlier versions