@@ -22,7 +22,7 @@ function Get-BcEnvironmentUpdateWindow {
         [string] $applicationFamily = "BusinessCentral",
         [Parameter(Mandatory = $true)]
         [string] $environment,
-        [string] $apiVersion = "v2.18"
+        [string] $apiversion = "v2.19"
     )
 
     $telemetryScope = InitTelemetryScope -name $MyInvocation.InvocationName -parameterValues $PSBoundParameters -includeParameters @()
