@@ -38,7 +38,7 @@ function Restore-BcEnvironment {
         [ValidateSet('Sandbox', 'Production')]
         [string] $environmentType = "Sandbox",
         [string] $pointInTime = "",
-        [string] $apiVersion = "v2.15",
+        [string] $apiversion = "v2.19",
         [switch] $force,
         [switch] $doNotWait
     )
